update to kafkakit v0.1.4
