# internal/rest/requests/update_official.go
@@ -24,7 +24,7 @@ func UpdateOfficial(r *http.Request) (req resources.UpdateOfficial, err error) {
 
 	errs := validation.Errors{
 		"data/id":         validation.Validate(&req.Data.Id, validation.Required),
-		"data/type":       validation.Validate(req.Data.Type, validation.Required, validation.In(resources.ProfileType)),
+		"data/type":       validation.Validate(req.Data.Type, validation.Required, validation.In("update_profile_official")),
 		"data/attributes": validation.Validate(req.Data.Attributes, validation.Required),
 	}
 
