# resources/model_pagination_data.go
@@ -1,0 +1,307 @@
+/*
+Chains lab profile service
+
+profile service docs
+
+API version: 0.0.1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the PaginationData type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &PaginationData{}
+
+// PaginationData struct for PaginationData
+type PaginationData struct {
+	// link to the current page
+	Self string `json:"self"`
+	// link to the first page
+	First *string `json:"first,omitempty"`
+	// link to the last page
+	Last *string `json:"last,omitempty"`
+	// link to the previous page
+	Prev *string `json:"prev,omitempty"`
+	// link to the next page
+	Next *string `json:"next,omitempty"`
+}
+
+type _PaginationData PaginationData
+
+// NewPaginationData instantiates a new PaginationData object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewPaginationData(self string) *PaginationData {
+	this := PaginationData{}
+	this.Self = self
+	return &this
+}
+
+// NewPaginationDataWithDefaults instantiates a new PaginationData object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewPaginationDataWithDefaults() *PaginationData {
+	this := PaginationData{}
+	return &this
+}
+
+// GetSelf returns the Self field value
+func (o *PaginationData) GetSelf() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Self
+}
+
+// GetSelfOk returns a tuple with the Self field value
+// and a boolean to check if the value has been set.
+func (o *PaginationData) GetSelfOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Self, true
+}
+
+// SetSelf sets field value
+func (o *PaginationData) SetSelf(v string) {
+	o.Self = v
+}
+
+// GetFirst returns the First field value if set, zero value otherwise.
+func (o *PaginationData) GetFirst() string {
+	if o == nil || IsNil(o.First) {
+		var ret string
+		return ret
+	}
+	return *o.First
+}
+
+// GetFirstOk returns a tuple with the First field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *PaginationData) GetFirstOk() (*string, bool) {
+	if o == nil || IsNil(o.First) {
+		return nil, false
+	}
+	return o.First, true
+}
+
+// HasFirst returns a boolean if a field has been set.
+func (o *PaginationData) HasFirst() bool {
+	if o != nil && !IsNil(o.First) {
+		return true
+	}
+
+	return false
+}
+
+// SetFirst gets a reference to the given string and assigns it to the First field.
+func (o *PaginationData) SetFirst(v string) {
+	o.First = &v
+}
+
+// GetLast returns the Last field value if set, zero value otherwise.
+func (o *PaginationData) GetLast() string {
+	if o == nil || IsNil(o.Last) {
+		var ret string
+		return ret
+	}
+	return *o.Last
+}
+
+// GetLastOk returns a tuple with the Last field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *PaginationData) GetLastOk() (*string, bool) {
+	if o == nil || IsNil(o.Last) {
+		return nil, false
+	}
+	return o.Last, true
+}
+
+// HasLast returns a boolean if a field has been set.
+func (o *PaginationData) HasLast() bool {
+	if o != nil && !IsNil(o.Last) {
+		return true
+	}
+
+	return false
+}
+
+// SetLast gets a reference to the given string and assigns it to the Last field.
+func (o *PaginationData) SetLast(v string) {
+	o.Last = &v
+}
+
+// GetPrev returns the Prev field value if set, zero value otherwise.
+func (o *PaginationData) GetPrev() string {
+	if o == nil || IsNil(o.Prev) {
+		var ret string
+		return ret
+	}
+	return *o.Prev
+}
+
+// GetPrevOk returns a tuple with the Prev field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *PaginationData) GetPrevOk() (*string, bool) {
+	if o == nil || IsNil(o.Prev) {
+		return nil, false
+	}
+	return o.Prev, true
+}
+
+// HasPrev returns a boolean if a field has been set.
+func (o *PaginationData) HasPrev() bool {
+	if o != nil && !IsNil(o.Prev) {
+		return true
+	}
+
+	return false
+}
+
+// SetPrev gets a reference to the given string and assigns it to the Prev field.
+func (o *PaginationData) SetPrev(v string) {
+	o.Prev = &v
+}
+
+// GetNext returns the Next field value if set, zero value otherwise.
+func (o *PaginationData) GetNext() string {
+	if o == nil || IsNil(o.Next) {
+		var ret string
+		return ret
+	}
+	return *o.Next
+}
+
+// GetNextOk returns a tuple with the Next field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *PaginationData) GetNextOk() (*string, bool) {
+	if o == nil || IsNil(o.Next) {
+		return nil, false
+	}
+	return o.Next, true
+}
+
+// HasNext returns a boolean if a field has been set.
+func (o *PaginationData) HasNext() bool {
+	if o != nil && !IsNil(o.Next) {
+		return true
+	}
+
+	return false
+}
+
+// SetNext gets a reference to the given string and assigns it to the Next field.
+func (o *PaginationData) SetNext(v string) {
+	o.Next = &v
+}
+
+func (o PaginationData) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o PaginationData) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["self"] = o.Self
+	if !IsNil(o.First) {
+		toSerialize["first"] = o.First
+	}
+	if !IsNil(o.Last) {
+		toSerialize["last"] = o.Last
+	}
+	if !IsNil(o.Prev) {
+		toSerialize["prev"] = o.Prev
+	}
+	if !IsNil(o.Next) {
+		toSerialize["next"] = o.Next
+	}
+	return toSerialize, nil
+}
+
+func (o *PaginationData) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"self",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varPaginationData := _PaginationData{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varPaginationData)
+
+	if err != nil {
+		return err
+	}
+
+	*o = PaginationData(varPaginationData)
+
+	return err
+}
+
+type NullablePaginationData struct {
+	value *PaginationData
+	isSet bool
+}
+
+func (v NullablePaginationData) Get() *PaginationData {
+	return v.value
+}
+
+func (v *NullablePaginationData) Set(val *PaginationData) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullablePaginationData) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullablePaginationData) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullablePaginationData(val *PaginationData) *NullablePaginationData {
+	return &NullablePaginationData{value: val, isSet: true}
+}
+
+func (v NullablePaginationData) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullablePaginationData) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
